--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,7 +17,10 @@ Metrics/AbcSize:
   Max: 30
 
 Metrics/MethodLength:
-  Max: 40
+  Max: 45
+
+Metrics/BlockLength:
+  Max: 30
 
 Metrics/ModuleLength:
   Max: 200
