Some basic tests

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ inherit_from: .rubocop_todo.yml
 
 AllCops:
   TargetRubyVersion: 2.7
+  NewCops: enable
   Include:
     - '**/Rakefile'
     - '**/config.ru'
@@ -21,6 +22,8 @@ Metrics/MethodLength:
 
 Metrics/BlockLength:
   Max: 30
+  Exclude:
+    - 'spec/**/*'
 
 Metrics/ModuleLength:
   Max: 200
